fixed layout issues for smaller width devices. started to remove Bootstrap mixins...

--- a/app/styles/layout/_l-body.scss
+++ b/app/styles/layout/_l-body.scss
@@ -13,7 +13,7 @@
 	&:after{
 		content:"";
 		top: 100px;
-		left: 45%;
+		left: 40%;
 		position: relative;
 	 	border-top: 60px solid $pg-divider;
 	 	border-left: 40px solid transparent;
@@ -36,7 +36,7 @@
 	&:after{
 		content:"";
 		top: 100px;
-		left: 45%;
+		left: 40%;
 		position: relative;
 	 	border-top: 60px solid $pg-divider;
 	 	border-left: 40px solid transparent;
