--- a/app/styles/layout/_l-footer.scss
+++ b/app/styles/layout/_l-footer.scss
@@ -1,5 +1,5 @@
 .l-body-footer{
 	width:100%;
-	height: 270px;
+	height: 240px;
 	background: $pg-background-2;
 }
