--- a/app/styles/layout/_l-header.scss
+++ b/app/styles/layout/_l-header.scss
@@ -12,7 +12,7 @@
 	&:after{
 		content:"";
 		top: 45px;
-		left: 46%;
+		left: 40%;
 		position: relative;
 	 	border-top: 60px solid $pg-divider;
 	 	border-left: 40px solid transparent;
