--- a/app/styles/modules/_m-header.scss
+++ b/app/styles/modules/_m-header.scss
@@ -4,24 +4,27 @@
 }
 
 .header-name{
-	@include make-sm-column(12);
-	margin-top: 0px;
-	padding-top: 30px;
-	//vertical-align: middle;
+	//@include make-sm-column(12);
+	width:100%;
+	margin-top: 20px;
+	padding-top: 10px;
+	font-size: em(70px);
+	text-align: center;
+	font-weight: bolder;
+	vertical-align: middle;
+	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) { 
 		@include make-sm-column(5);
 		margin-top: 150px;
-		padding-top: 0px;
 		vertical-align: text-bottom;
-		font-size: em(36px);
 	}
 }
 
 .navi{
-	@include make-sm-column(12);
-	margin-top: 150px;
+	//@include make-sm-column(12);
+	width:100%;
+	margin-top: 240px;
 	text-align: center;
-	font-size: em(25px);
 	// reponsive layout for tablets and up
 	@media only screen and (min-width: 850px) { 
 		@include make-sm-column(7);
@@ -30,17 +33,26 @@
 }
 
 .naviList{
-	margin-top: -20	px;
-	padding-right: 0px;
-	padding-left: 0px;
+	margin-top: -20px;
 	//BEM element for .naviList
 	&__item{
 		display: inline-block;
-		margin-right: 20px;
-		margin-left: 20px;
+		margin-right: 5px;
+		margin-left: 5px;
 		padding-right: 20px;
 		padding-left:20px;
+		font-size: em(16px);
 		border: 2px solid $text;
 		background-clip: padding-box;
+		// reponsive layout for tablets and up
+		@media only screen and (min-width: 850px) {
+			margin-left: 30px;
+			font-size: em(23px);
+		}
+	}
+	// reponsive layout for tablets and up - for .naviList
+	@media only screen and (min-width: 850px) {
+		margin-top: 20px;
+		margin-left: 50px;
 	}
 }
